# afa

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
crates/afa-bus/: Cargo.toml
crates/afa-bus/src/: lib.rs
crates/afa-contract-testing/: Cargo.toml
crates/afa-contract-testing/src/: fixtures.rs  harness.rs  lib.rs
crates/afa-contract-testing/src/embedding/: conformance.rs  mock.rs  mod.rs
crates/afa-contracts/: Cargo.toml
crates/afa-contracts/src/: cli.rs  error.rs  events.rs  execution_context.rs  ids.rs  kernel.rs  lib.rs  observability.rs  security.rs  storage.rs  versioning_example.rs
crates/afa-contracts/src/embedding/: capabilities.rs  error.rs  events.rs  mod.rs  traits.rs
crates/afa-contracts/src/knowledge/: capabilities.rs  error.rs  events.rs  mod.rs  record.rs  request.rs  topic.rs
crates/afa-contracts/src/llm/: capabilities.rs  error.rs  events.rs  mod.rs  request.rs  response.rs  stream.rs
crates/afa-contracts/tests/: health_check_shape.rs  observability_error_mapping.rs  observability_types.rs  security_error_mapping.rs  security_serde.rs
crates/afa-kernel/: Cargo.toml
crates/afa-kernel/src/: capability_registry.rs  dashboard.rs  event_bus.rs  kernel.rs  lib.rs  mode.rs  runtime.rs  scheduler.rs
crates/afa-kernel/src/dashboard/: auth.rs  health.rs  pre_bootstrap.rs  spans.rs
crates/afa-kernel/tests/: dashboard_transport.rs  hash_auth.rs  kernel_dispatch_records_spans.rs  knowledge_integration.rs  llm_integration.rs  pre_bootstrap_seal.rs  retention_purge.rs  smoke.rs
crates/afa-knowledge/: Cargo.toml
crates/afa-knowledge/src/: conformance.rs  lib.rs
crates/afa-knowledge/tests/: knowledge_v1.rs
crates/afa-llm/: Cargo.toml
crates/afa-llm/src/: conformance.rs  lib.rs  mock_adapter.rs
crates/afa-llm/tests/: llm_v1.rs  multi_turn.rs
crates/afa-observability/: Cargo.toml
crates/afa-observability/src/: error.rs  events.rs  health.rs  lib.rs  observability.rs  persistence.rs  purge.rs  record.rs
crates/afa-observability/tests/: observability_v1_tracing.rs
crates/afa-plugin-embedding-local/: Cargo.toml
crates/afa-plugin-embedding-local/src/: adapter.rs  config.rs  download.rs  lib.rs  model.rs  offline.rs
crates/afa-plugin-embedding-local/tests/: conformance_real.rs
crates/afa-plugin-embedding-ollama/: Cargo.toml
crates/afa-plugin-embedding-ollama/src/: adapter.rs  client.rs  config.rs  lib.rs
crates/afa-plugin-embedding-ollama/tests/: conformance_real.rs
crates/afa-plugin-knowledge-json/: Cargo.toml
crates/afa-plugin-knowledge-json/src/: adapter.rs  atomic_write.rs  config.rs  index.rs  index_file.rs  lib.rs  search.rs  storage.rs  topic_slug.rs
crates/afa-plugin-knowledge-json/tests/: adapter_concurrency.rs  adapter_crash_safety.rs  adapter_events.rs  adapter_integration.rs  adapter_unit.rs  proptest_round_trips.proptest-regressions  proptest_round_trips.rs
crates/afa-plugin-llm-chat-completions/: Cargo.toml
crates/afa-plugin-llm-chat-completions/examples/: concurrent_smoke.rs  negative_battery_smoke.rs  real_provider_smoke.rs  vendor_shape_probe.rs
crates/afa-plugin-llm-chat-completions/src/: adapter.rs  config.rs  key_wiring.rs  lib.rs  streaming.rs
crates/afa-plugin-llm-chat-completions/tests/: adapter_integration.rs  adapter_streaming.rs  conformance.rs
crates/afa-plugin-llm-http/: Cargo.toml
crates/afa-plugin-llm-http/src/: config.rs  key_wiring.rs  lib.rs  openai_adapter.rs  responses_adapter.rs  streaming.rs
crates/afa-plugin-llm-http/tests/: adapter_errors.rs  adapter_integration.rs  adapter_streaming.rs
crates/afa-plugin-llm-openai-compat/: Cargo.toml
crates/afa-plugin-llm-openai-compat/examples/: concurrent_smoke.rs  negative_battery_smoke.rs  real_provider_smoke.rs  vendor_shape_probe.rs
crates/afa-plugin-llm-openai-compat/src/: adapter.rs  config.rs  key_wiring.rs  lib.rs
crates/afa-plugin-llm-openai-compat/tests/: adapter_integration.rs  conformance.rs
crates/afa-security/: Cargo.toml
crates/afa-security/src/: crypto.rs  engine.rs  errors.rs  events.rs  lib.rs  master_key.rs  storage.rs
crates/afa-security/tests/: aead_tampering.rs  audit_event_shape.rs  boot_failures.rs  concurrent_rotate.rs  crypto_roundtrip.rs  first_boot_creates_db.rs  llm_integration.rs  lookup_hash_roundtrip.rs  rotate_invalidates_old.rs  zeroize_on_drop.rs
crates/afa-security/tests/common/: mod.rs
crates/afa-storage/: Cargo.toml
crates/afa-storage/src/: lib.rs  migrate.rs  open.rs  with_conn.rs
crates/afa-storage/tests/: afa_storage_roundtrip.rs
sessions/: .handoff-log.md  .last-handoff
