[workspace]
resolver = "2"
members = [
    "crates/afa-bus",
    "crates/afa-contracts",
    "crates/afa-contract-testing",
    "crates/afa-kernel",
    "crates/afa-security",
    "crates/afa-llm",
    "crates/afa-plugin-llm-http",
    "crates/afa-plugin-llm-chat-completions",
    "crates/afa-knowledge",
    "crates/afa-plugin-knowledge-json",
    "crates/afa-plugin-embedding-local",
    "crates/afa-plugin-embedding-ollama",
    "crates/afa-storage",
]

[workspace.dependencies]
# SSE (Server-Sent Events) parser used by
# the streaming adapters (`stream_complete`).
# The `Stream<Item = Result<Bytes, _>>` of a
# reqwest response is `.eventsource()`-ed into
# a `Stream<Item = Result<Event, _>>` of typed
# SSE events.
eventsource-stream = "0.2"

# Pinned deps for the Knowledge engine
# (pack #5). All three are dev-deps of
# `afa-plugin-knowledge-json` (tempfile for
# per-test storage roots, proptest for the
# `.index.json` serialization round-trip).
# `uuid` is a direct dep of
# `afa-plugin-knowledge-json` for `RecordId`
# generation + the per-record filename +
# the `tag_index: HashSet<Uuid>` in the
# `InMemoryIndex`. The `v4` feature enables
# `Uuid::new_v4()`; the `serde` feature
# enables `Serialize`/`Deserialize` for
# the `.index.json` round-trip. Pinned to
# the same version the `afa-contracts`
# crate already resolves to so the
# workspace has exactly one `uuid`
# release.
uuid = { version = "1.23.4", features = ["v4", "serde"] }
tempfile = "3.27.0"
proptest = "1.11.0"
