[package]
name = "afa-bus"
version = "0.1.0"
edition = "2021"
description = "The AFA in-process pub/sub event bus. Shared by afa-kernel and afa-security so the kernel can construct a SecurityEngine (which needs a bus to publish audit events) without creating a cyclic crate dependency."
license = "Apache-2.0"

[dependencies]
afa-contracts = { path = "../afa-contracts" }
tokio = { version = "1", features = ["rt", "sync", "macros"] }
tracing = "0.1"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
