[package]
name = "afa-contract-testing"
version = "0.1.0"
edition = "2021"
description = "Conformance-test harness for AFA interfaces."
license = "Apache-2.0"

[features]
real-local-conformance = ["dep:afa-plugin-embedding-local"]
real-ollama-conformance = ["dep:afa-plugin-embedding-ollama", "dep:serde_json"]

[dependencies]
afa-contracts = { path = "../afa-contracts" }
afa-plugin-embedding-local = { path = "../afa-plugin-embedding-local", optional = true }
afa-plugin-embedding-ollama = { path = "../afa-plugin-embedding-ollama", optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
async-trait = "0.1"
paste = "1"
tempfile = { workspace = true }
wiremock = "0.6"
