[package]
name = "afa-contracts"
version = "0.1.0"
edition = "2021"
description = "Shared type definitions for the AFA kernel and its plugins."
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "2.0"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
zeroize = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "macros"] }
