[package]
name = "afa-kernel"
version = "0.1.0"
edition = "2021"
description = "The AFA kernel: event ingress, scheduler, and in-process pub/sub event bus."
license = "Apache-2.0"

[dependencies]
# Axum provides the Phase 3 Dashboard Transport HTTP + WebSocket router.
axum = { version = "0.8", features = ["ws", "json", "http1"] }
afa-contracts = { path = "../afa-contracts" }
# The in-process pub/sub bus (extracted to its own crate in
# Phase 3 of the security pack so `afa-kernel` and
# `afa-security` can share it without a cyclic dep — see
# `crates/afa-bus/src/lib.rs`'s opening comment for the
# full rationale). Re-exported below as
# `afa_kernel::event_bus::*` for backwards compatibility.
afa-bus = { path = "../afa-bus" }
afa-security = { path = "../afa-security" }
# Phase 2 wires the observability engine into the
# kernel's dispatch path. The engine itself lives
# in `afa-observability` (the spans-DB owner); the
# kernel only needs the `ObservabilityEngine` +
# `record_span` / `record_span_value` helpers, all
# of which the engine re-exports from its crate
# root.
afa-observability = { path = "../afa-observability" }
# Phase 2 records a `started_at` timestamp for every
# step body via the engine's method-form
# `record_span`. The type is `chrono::DateTime<Utc>`
# (re-exported via the engine's signature), so the
# kernel needs a direct `chrono` dep to mint the
# `Utc::now()` value at step-spawn time.
chrono = { version = "0.4", default-features = false, features = ["clock"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["rt", "sync", "macros"] }
tracing = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Used by `capability_registry::RegisterError` (the
# "llm adapter already registered" closed-set). The
# kernel itself is the only caller of `register_llm`,
# so the error is a programmer-error, not a runtime
# recovery path.
thiserror = "1.0"
# Phase 3 Dashboard Transport dependencies.
tower = { version = "0.5", features = ["util"] }
sha2 = "0.10"
# `read_master_key_from_env` to lift the `AFA_MASTER_KEY`
# env-var string into a `MasterKey` (via
# `MasterKey::from_hex`). The kernel's *production* boot
# path does not touch hex directly — the env-var reader
# in `tests/boot_failures.rs` is the integration surface
# that proves the boot path is correct.
hex = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "sync", "macros", "time", "test-util"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
# Used by the `capability_registry::tests::CountingAdapter`
# fixture to implement `LlmV1` for the in-file
# `CapabilityRegistry` unit tests. The fixture needs the
# `#[async_trait]` macro to expand the async methods into
# `Pin<Box<dyn Future + Send>>` (the trait is `#[async_trait]`
# itself, so the impl must be too).
async-trait = "0.1"
# In-memory temp dirs for the `secrets.db` SQLite file in
# the in-crate `Kernel::new` tests
# (`crates/afa-kernel/src/kernel.rs`'s `fresh_kernel`
# helper) and in the integration tests
# (`tests/boot_failures.rs` and `tests/llm_integration.rs`).
tempfile = "3"
# Mock HTTP server for the LLM-style integration test
# (`tests/llm_integration.rs`). Used to stand up a fake
# HTTP target that the security engine's
# `seal` → `unseal` → `Authorization: Bearer <unsealed>`
# pipeline points at. Picked over `httpmock` (see
# `tests/llm_integration.rs` opening comment) for the
# test-only request-recording API and the native
# tokio-friendly async server.
wiremock = "0.6"
# Concrete LLM adapter for the Phase 4 end-to-end
# integration test (`tests/llm_integration.rs`).
# Used in the `dev-dependencies` section (not
# `dependencies`) to preserve the layering:
# `afa-kernel` is the composition root and ships
# only the trait-object view; the concrete
# `ResponsesAdapter` lives in its own plugin crate
# and is wired in by the bootstrap. The integration
# test is the only place in the kernel crate that
# materialises a concrete adapter.
afa-plugin-llm-http = { path = "../afa-plugin-llm-http" }
# Concrete Knowledge adapter for the Phase 4
# end-to-end integration test
# (`tests/knowledge_integration.rs`). Same
# layering rationale as
# `afa-plugin-llm-http` above: the kernel ships
# only the trait-object view
# (`CapabilityRegistry::register_knowledge`); the
# concrete `JsonKnowledgeAdapter` lives in its own
# plugin crate and is wired in by the integration
# test. The integration test is the only place in
# the kernel crate that materialises a concrete
# Knowledge adapter.
afa-plugin-knowledge-json = { path = "../afa-plugin-knowledge-json" }
# Used by the in-crate `Kernel::new` boot-failure tests
# in `src/kernel.rs` (the two CID:kernel-002 and
# CID:kernel-003 tests added in Phase 0.5b). The tests
# build a tampered SQLite file (a `secrets.db` with a
# wrong `schema_version`, or a `secrets.db` whose
# parent is a regular file) and assert that
# `Kernel::new` rejects it with the right domain-level
# `SecurityErrorV1` variant. The kernel does NOT use
# `rusqlite` in production code (the engine does, the
# kernel just owns the boot path); the dep is
# `dev-dependencies`-only to keep the production
# binary free of the SQLite C bindings.
rusqlite = { version = "0.31", features = ["bundled"] }
