[package]
name = "afa-llm"
version = "0.1.0"
edition = "2021"
description = "Vendor-neutral LLM engine capability + conformance suite."
license = "Apache-2.0"

[dependencies]
afa-contracts = { path = "../afa-contracts" }
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "sync", "macros", "time"] }
tracing = "0.1"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeroize = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "sync", "macros", "time", "test-util"] }
